refactor(ui): 优化主界面代码结构和功能
- 修正方法名称拼写错误 (openServerLinkWindo -> openServerLinkWindow)
- 添加日志记录功能- 优化历史菜单项创建逻辑
- 调整服务器连接窗口逻辑
- 重构部分代码，提高可读性和维护性